--- a/content/publication/cikm18/cite.bib
+++ b/content/publication/cikm18/cite.bib
@@ -1,13 +1,17 @@
-@article{cunha21,
-title = {On the cost-effectiveness of neural and non-neural approaches and representations for text classification: A comprehensive comparative study},
-journal = {Information Processing & Management},
-volume = {58},
-number = {3},
-pages = {102481},
-year = {2021},
-issn = {0306-4573},
-doi = {https://doi.org/10.1016/j.ipm.2020.102481},
-url = {https://www.sciencedirect.com/science/article/pii/S0306457320309705},
-author = {Washington Cunha and Vitor Mangaravite and Christian Gomes and Sérgio Canuto and Elaine Resende and Cecilia Nascimento and Felipe Viegas and Celso França and Wellington Santos Martins and Jussara Almeida and Thierson Rosa and Leonardo Rocha and Marcos A. Goncalves},
-keywords = {Text classification, Comparative study, Systematic review},
+@inproceedings{10.1145/3269206.3271797,
+author = {Viegas, Felipe and Luiz, Washington and Gomes, Christian and Khatibi, Amir and Canuto, S\'{e}rgio and Mour\~{a}o, Fernando and Salles, Thiago and Rocha, Leonardo and Gon\c{c}alves, Marcos Andr\'{e}},
+title = {Semantically-Enhanced Topic Modeling},
+year = {2018},
+isbn = {9781450360142},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3269206.3271797},
+doi = {10.1145/3269206.3271797},
+abstract = {In this paper, we advance the state-of-the-art in topic modeling by means of the design and development of a novel (semi-formal) general topic modeling framework. The novel contributions of our solution include: (i) the introduction of new semantically-enhanced data representations for topic modeling based on pooling, and (ii) the proposal of a novel topic extraction strategy - ASToC - that solves the difficulty in representing topics in our semantically-enhanced information space. In our extensive experimentation evaluation, covering 12 datasets and 12 state-of-the-art baselines, totalizing 108 tests, we exceed (with a few ties) in almost 100 cases, with gains of more than 50% against the best baselines (achieving up to 80% against some runner-ups). We provide qualitative and quantitative statistical analyses of why our solutions work so well. Finally, we show that our method is able to improve document representation in automatic text classification.},
+booktitle = {Proceedings of the 27th ACM International Conference on Information and Knowledge Management},
+pages = {893–902},
+numpages = {10},
+keywords = {word embeddings, topic modeling, bag of words},
+location = {Torino, Italy},
+series = {CIKM '18}
 }
