--- a/content/publication/cikm20/cite.bib
+++ b/content/publication/cikm20/cite.bib
@@ -1,13 +1,17 @@
-@article{cunha21,
-title = {On the cost-effectiveness of neural and non-neural approaches and representations for text classification: A comprehensive comparative study},
-journal = {Information Processing & Management},
-volume = {58},
-number = {3},
-pages = {102481},
-year = {2021},
-issn = {0306-4573},
-doi = {https://doi.org/10.1016/j.ipm.2020.102481},
-url = {https://www.sciencedirect.com/science/article/pii/S0306457320309705},
-author = {Washington Cunha and Vitor Mangaravite and Christian Gomes and Sérgio Canuto and Elaine Resende and Cecilia Nascimento and Felipe Viegas and Celso França and Wellington Santos Martins and Jussara Almeida and Thierson Rosa and Leonardo Rocha and Marcos A. Goncalves},
-keywords = {Text classification, Comparative study, Systematic review},
+@inproceedings{10.1145/3340531.3412180,
+author = {Mendes, Luiz Felipe and Gon\c{c}alves, Marcos and Cunha, Washington and Rocha, Leonardo and Couto-Rosa, Thierson and Martins, Wellington},
+title = {"Keep It Simple, Lazy" -- MetaLazy: A New MetaStrategy for Lazy Text Classification},
+year = {2020},
+isbn = {9781450368599},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3340531.3412180},
+doi = {10.1145/3340531.3412180},
+abstract = {Recent advances in text-related tasks on the Web, such as text (topic) classification and sentiment analysis, have been made possible by exploiting mostly the "rule of more": more data (massive amounts) more computing power, more complex solutions. We propose a shift in the paradigm to do "more with less" by focusing, at maximum extent, just on the task at hand (e.g., classify a single test instance). Accordingly, we propose MetaLazy, a new supervised lazy text classification meta-strategy that greatly extends the scope of lazy solutions. Lazy classifiers postpone the creation of a classification model until a given test instance for decision making is given. MetaLazy exploits new ideas and solutions, which have in common their lazy nature, producing altogether a solution for text classification, which is simpler, more efficient, and less data demanding than new alternatives. It extends and evolves the lazy creation of the model for the test instance by allowing: (i) to dynamically choose the best classifier for the task; (ii) the exploration of distances in the neighborhood of the test document when learning a classification model, thus diminishing the importance of irrelevant training instances; and (iii) a better representational space for training and test documents by augmenting them, in a lazy fashion, with new co-occurrence based features considering just those observed in the specific test instance. In a sizeable experimental evaluation, considering topics and sentiment analysis datasets and nine baselines, we show that our MetaLazy instantiations are among the top performers in most situations, even when compared to state-of-the-art deep learning classifiers such as Deep Network Transformer Architectures.},
+booktitle = {Proceedings of the 29th ACM International Conference on Information &amp; Knowledge Management},
+pages = {1125–1134},
+numpages = {10},
+keywords = {text classification, machine learning, lazy learning},
+location = {Virtual Event, Ireland},
+series = {CIKM '20}
 }
