--- a/content/publication/www18/cite.bib
+++ b/content/publication/www18/cite.bib
@@ -1,13 +1,17 @@
-@article{cunha21,
-title = {On the cost-effectiveness of neural and non-neural approaches and representations for text classification: A comprehensive comparative study},
-journal = {Information Processing & Management},
-volume = {58},
-number = {3},
-pages = {102481},
-year = {2021},
-issn = {0306-4573},
-doi = {https://doi.org/10.1016/j.ipm.2020.102481},
-url = {https://www.sciencedirect.com/science/article/pii/S0306457320309705},
-author = {Washington Cunha and Vitor Mangaravite and Christian Gomes and Sérgio Canuto and Elaine Resende and Cecilia Nascimento and Felipe Viegas and Celso França and Wellington Santos Martins and Jussara Almeida and Thierson Rosa and Leonardo Rocha and Marcos A. Goncalves},
-keywords = {Text classification, Comparative study, Systematic review},
+@inproceedings{10.1145/3178876.3186168,
+author = {Luiz, Washington and Viegas, Felipe and Alencar, Rafael and Mour\~{a}o, Fernando and Salles, Thiago and Carvalho, D\'{a}rlinton and Gon\c{c}alves, Marcos Andre and Rocha, Leonardo},
+title = {A Feature-Oriented Sentiment Rating for Mobile App Reviews},
+year = {2018},
+isbn = {9781450356398},
+publisher = {International World Wide Web Conferences Steering Committee},
+address = {Republic and Canton of Geneva, CHE},
+url = {https://doi.org/10.1145/3178876.3186168},
+doi = {10.1145/3178876.3186168},
+abstract = {In this paper, we propose a general framework that allows developers to filter, summarize and analyze user reviews written about applications on App Stores. Our framework extracts automatically relevant features from reviews of apps (e.g., information about functionalities, bugs, requirements, etc) and analyzes the sentiment associated with each of them. Our framework has three main building blocks, namely, (i) topic modeling, (ii) sentiment analysis and (iii) summarization interface. The topic modeling block aims at finding semantic topics from textual comments, extracting the target features based on the most relevant words of each discovered topic. The sentiment analysis block detects the sentiment associated with each discovered feature. The summarization interface provides to developers an intuitive visualization of the features (i.e., topics) and their associated sentiment, providing richer information than a 'star rating' strategy. Our evaluation shows that the topic modeling block is able to organize information provided by users in subcategories that facilitate the understanding of which features more positively/negatively impact the overall evaluation of the application. Regarding user satisfaction, we can observe that, in spite of the star rating being a good measure of evaluation, the Sentiment Analysis technique is more accurate in capturing the sentiment transmitted by the user by means of a comment.},
+booktitle = {Proceedings of the 2018 World Wide Web Conference},
+pages = {1909–1918},
+numpages = {10},
+keywords = {topic model, sentiment analysis, analysis of online reviews},
+location = {Lyon, France},
+series = {WWW '18}
 }
